@@ -30,6 +30,8 @@ See xref:spel.adoc[SpEL Support] for more information.
 [[x6.4-general]]
 === General Changes
 
+The Java DSL `SourcePollingChannelAdapterSpec` can now be configured with a custom `TaskScheduler`
+
 [[x6.4-remote-files-changes]]
 === Remote File Adapters Changes
 
